# agent-heap

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FEATURES.md  Makefile  README.md  SECURITY.md  agent-heap.db  docker-compose.yml  go.mod  go.sum  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: release.yml
.ralph/: ralph-loop.state.json
agent/: graph.py
agent/memory/: __init__.py  vector_store.py
agent_heap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blog/: README.md  first-post.md  second-post.md  third-post.md
chains/: addresses.py  arbitrum.py  base.py  router.py
chroma_data/: chroma.sqlite3
cli/: main.py
data/: agent_wallet.json  coingecko.py  defillama.py
db/: schema.py  session.py
docs/: deployment-guide.md  gig-hunting-guide.md  go-cli-rewrite-spec.md
grants/: superteam-agentic-engineering.md
heap_token/: HEAP.sol  __init__.py  buyback.py  deploy-sdk.mjs  deploy.py
proposals/: arbitrum-dao-grant-proposal.md  current-opportunities.md  freelancer-polygon-deploy.md  superteam-followup.md  telegram-pitch-template.md  upwork-proposal-template.md
risk/: circuit_breaker.py  position_sizing.py  slippage.py
scripts/: deploy.js
specs/: 001-scaffold.md  002-data-feeds.md  003-database.md  004-agent-graph.md  005-cli-loop.md
test/: SimpleToken.test.ts  TaxToken.test.ts
tests/: conftest.py  test_agent.py  test_harvester.py  test_heap_token.py
wallet/: __init__.py  agent_wallet.json  faucet.py  generator.py  key_manager.py  setup.py
(+44 files in other folders)
