[project]
name = "agent-heap"
version = "0.1.0"
description = "Multi-chain yield optimization AI agent"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.60",
    "langgraph>=0.2",
    "web3>=7.0",
    "chromadb>=0.5",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "click>=8.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "py-solc-x>=2.0",
]

[project.scripts]
agent-heap = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
